--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,23 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre&family=Oswald:wght@700&display=swap" rel="stylesheet">
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
+      
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <strong>Bienvenido a la aplicación </strong>
+    <br><br>
+    <p>Esta es una aplicación prueba  </p>
+    <p>consumiendo el API de Rick And Morty</p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://rickandmortyapi.com/">The Rick and Morty API</a></p>
+    <ion-button (click)="goToHome()">Lista de personajes</ion-button>
   </div>
 </ion-content>
