--- a/src/app/userslist/userslist.page.html
+++ b/src/app/userslist/userslist.page.html
@@ -8,10 +8,24 @@
 </ion-header>
 
 <ion-content>
-  <ion-item *ngFor="let character of characters"[routerLink]="['/home']">
-    <ion-avatar slot="start">
-      <img src="{{character.image}}" alt="" >
-    </ion-avatar>
-    <ion-label>{{character.name}}</ion-label>
-  </ion-item>
+  <ion-grid>
+    <ion-row>
+    
+    <ion-col sizeMd="4" offsetMd="4">
+      <ion-card *ngFor="let character of characters"[routerLink]="['/profile/'+character.id]">
+        <ion-item>
+        <ion-avatar slot="start">
+          <img src="{{character.image}}" alt="" >
+        </ion-avatar>
+        <ion-label>{{character.name}}</ion-label>
+        </ion-item>
+      </ion-card>
+      <ion-infinite-scroll threshold="25%" (ionInfinite)="loadMore($event)">
+        <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more users...">
+        </ion-infinite-scroll-content>
+      </ion-infinite-scroll>
+    </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
